# deepseek

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
bucket/: deepseek.json
scripts/: install.ps1  install.sh
skills/delegating-to-deepseek/: SKILL.md
skills/delegating-to-deepseek/evals/: evals.json
skills/delegating-to-deepseek/references/: consult-prompt.md  execute-prompt.md
src/: agent.rs  api.rs  cli.rs  config.rs  diagnostics.rs  main.rs  search.rs  tools.rs
tests/: login_windows.rs
