[package]
name = "deepseek-cli"
version = "2026.714.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[[bin]]
name = "deepseek"
path = "src/main.rs"

[dependencies]
anyhow = "1"
atomic-write-file = "=0.3.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
command-group = { version = "=5.0.1", features = ["with-tokio"] }
dirs = "6"
httpdate = "1"
iana-time-zone = "0.1"
os_info = "3"
rpassword = "7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
wiremock = "=0.6.4"
