[package]
name = "deepseek-cli"
version = "2026.716.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"

[[bin]]
name = "deepseek"
path = "src/main.rs"

[dependencies]
anyhow = "1"
atomic-write-file = "=0.3.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
command-group = { version = "=5.0.1", features = ["with-tokio"] }
dirs = "6"
fff-search = { git = "https://github.com/dmtrKovalenko/fff", rev = "44a5b259570730a4236ecbf06673d43ef7b2263e", version = "=0.9.6", default-features = false, features = ["ripgrep"] }
httpdate = "1"
iana-time-zone = "0.1"
os_info = "3"
rpassword = "7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
wiremock = "=0.6.4"
